src/tests/krate/publish/snapshots/all__krate__publish__validation__license_and_description_required-3.snap
---
source: src/tests/krate/publish/validation.rs
expression: response.into_json()
---
errors:
  - detail: "missing or empty metadata fields: description. Please see https://doc.rust-lang.org/cargo/reference/manifest.html for how to upload metadata"

